kubernetes/apps/sparky-fitness/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sparkyfitness
  namespace: sparkyfitness
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fit.pxldi.de`)
      services:
        - name: sparkyfitness-frontend
          port: 80
